[gd_scene load_steps=6 format=2]

[ext_resource path="res://font/Built/Ubuntu_R_48tred.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Modules/FireBaseAuther.gd" type="Script" id=2]
[ext_resource path="res://font/Built/Ubuntu_M_48tred.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sprites/MavrickleIcon.png" type="Texture" id=4]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/GravityHourGlass.tscn" type="PackedScene" id=5]

[node name="FireBaseAuther" type="HBoxContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1100.0
margin_bottom = 96.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AUTHING" type="HBoxContainer" parent="."]
margin_right = 1100.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextFields" type="HBoxContainer" parent="AUTHING"]
margin_right = 696.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UserMail" type="LineEdit" parent="AUTHING/TextFields"]
margin_right = 346.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
placeholder_text = "User / Mail"

[node name="Password" type="LineEdit" parent="AUTHING/TextFields"]
margin_left = 350.0
margin_right = 696.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
secret = true
placeholder_text = "Password"

[node name="Buttons" type="HBoxContainer" parent="AUTHING"]
margin_left = 700.0
margin_right = 1100.0
margin_bottom = 96.0
rect_min_size = Vector2( 400, 0 )
size_flags_vertical = 3

[node name="LOGINbutton" type="Button" parent="AUTHING/Buttons"]
margin_right = 198.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "LOGIN"

[node name="SIGNUPbutton" type="Button" parent="AUTHING/Buttons"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "SIGNUP"

[node name="AUTHED" type="HBoxContainer" parent="."]
visible = false
margin_right = 1100.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="USERbutton" type="Button" parent="AUTHED"]
margin_right = 1100.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "A Dasandimian"
icon = ExtResource( 4 )
expand_icon = true

[node name="PLSWAIT" type="HBoxContainer" parent="."]
visible = false
margin_right = 1100.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HourGlassContainer" type="Control" parent="PLSWAIT"]
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 0 )
size_flags_vertical = 3

[node name="GravityHourGlass" parent="PLSWAIT/HourGlassContainer" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 50, 50 )

[node name="LabelPlsWait" type="Label" parent="PLSWAIT"]
margin_left = 100.0
margin_right = 1100.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Logging in..."
align = 1
valign = 1

[node name="HourglassFramePerSecond" type="Timer" parent="PLSWAIT"]
wait_time = 0.01
[connection signal="text_changed" from="AUTHING/TextFields/UserMail" to="." method="_on_UserMail_text_changed"]
[connection signal="text_changed" from="AUTHING/TextFields/Password" to="." method="_on_Password_text_changed"]
[connection signal="pressed" from="AUTHING/Buttons/LOGINbutton" to="." method="_on_LOGINbutton_pressed"]
[connection signal="pressed" from="AUTHING/Buttons/SIGNUPbutton" to="." method="_on_SIGNUPbutton_pressed"]
[connection signal="pressed" from="AUTHED/USERbutton" to="." method="_on_USERbutton_pressed"]
[connection signal="timeout" from="PLSWAIT/HourglassFramePerSecond" to="." method="_on_HourglassFramePerSecond_timeout"]
